--- a/www/index.html
+++ b/www/index.html
@@ -258,18 +258,10 @@
 
 					<div class="ui-grid-a">
 
-						<div class="ui-block-a"><a href="#mi-colegio" class="btn-menu-1" data-transition="slidefade">Mi
-								Colegio</a></div>
-						<div class="ui-block-b"><a href="#estudiantes" class="btn-menu-2"
-								data-transition="slidefade">Estudiantes</a></div>
+						
 
 						<div class="ui-block-a"><a href="#diagnostico" class="btn-menu-3"
 								data-transition="slidefade">Diagnóstico</a></div>
-						<div class="ui-block-b"><a href="#docentes" class="btn-menu-4"
-								data-transition="slidefade">Docentes</a></div>
-
-						<div class="ui-block-a"><a href="#varios" class="btn-menu-5"
-								data-transition="slidefade">Varios</a></div>
 						<div class="ui-block-b"><a href="#perfil" class="btn-menu-6"
 								data-transition="slidefade">Perfil</a></div>
 
@@ -285,166 +277,6 @@
 
 
 
-	<!-- /mi colegio -->
-
-	<div data-role="page" id="mi-colegio">
-		<div data-role="panel" id="menu-panel-1" class="menu-deslizable" data-display="overlay" data-position="right">
-
-
-			<!-- panel content -->
-
-			<h2 class="text-right">Menú</h2>
-			<ul class="text-right">
-
-				<li><a href="#menu">Inicio</a></li>
-				<li><a href="#mi-colegio">Mi colegio</a></li>
-				<li><a href="#estudiantes">Estudiantes</a></li>
-				<li><a href="#diagnostico">Diagnóstico</a></li>
-				<li><a href="#docentes">Docentes</a></li>
-				<li><a href="#varios">Varios</a></li>
-				<li><a href="#perfil">Perfil</a></li>
-
-			</ul>
-
-
-
-			<p class="text-center"><a href="#ingreso" class="btn btn-azul">CERRAR SESIÓN</a></p>
-
-		</div>
-
-
-		<!-- /panel -->
-
-		<div data-role="header" data-position="fixed" class="barra-top">
-
-
-			<div class="ui-grid-b cabecera">
-
-				<div class="ui-block-a"><a href="#menu" class="btn link-blanco" data-direction="reverse"
-						data-transition="slidefade">
-						<i class="fas fa-arrow-left"></i>
-						<spam class="ocultar">Regresar</spam>
-					</a></div>
-
-				<div class="ui-block-b text-center">
-					<h1>Mi colegio</h1>
-				</div>
-
-				<div class="ui-block-c text-right"><a href="#menu-panel-1" class="btn link-blanco"><i
-							class="fas fa-bars"></i></a></div>
-
-			</div>
-
-		</div>
-		<div data-role="content" class="p-0">
-
-			<div class="list-item bg-1 blanco">
-
-				<div class="ui-grid-a title-item">
-
-					<div class="ui-block-a text-left link-blanco" data-direction="reverse" data-transition="slidefade">
-						<p class="small">Imagen de referencia</p>
-						<h2>¿Quienes somos?</h2>
-
-					</div>
-
-					<div class="ui-block-b text-right">
-
-						<p class="megusta">
-							<a href="#megusta" class="link-blanco">
-								<i class="fas fa-heart"></i>
-								428 me gusta</a>
-
-
-							<a href="#quienesomos">
-								<i class="fas fa-chevron-right"></i>
-							</a>
-						</p>
-
-					</div>
-
-				</div>
-
-			</div>
-
-
-
-
-			<div class="list-item bg-2 blanco">
-				<div class="ui-grid-a title-item">
-					<div class="ui-block-a text-left link-blanco" data-direction="reverse" data-transition="slidefade">
-						<p class="small">Imagen de referencia</p>
-						<h2>Misión-Visión</h2>
-					</div>
-					<div class="ui-block-b text-right">
-						<p class="megusta"> <a href="#megusta" class="link-blanco"> <i class="fas fa-heart"></i> 198 me
-								gusta</a> <a href="#quienesomos"> <i class="fas fa-chevron-right"></i> </a></p>
-					</div>
-				</div>
-			</div>
-
-
-
-			<div class="list-item bg-3 blanco">
-				<div class="ui-grid-a title-item">
-					<div class="ui-block-a text-left link-blanco" data-direction="reverse" data-transition="slidefade">
-						<p class="small">Imagen de referencia</p>
-						<h2>Símbolos</h2>
-					</div>
-					<div class="ui-block-b text-right">
-						<p class="megusta"> <a href="#megusta" class="link-blanco"> <i class="fas fa-heart"></i> 735 me
-								gusta</a> <a href="#quienesomos"> <i class="fas fa-chevron-right"></i></a></p>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="list-item bg-4 blanco">
-				<div class="ui-grid-a title-item">
-					<div class="ui-block-a text-left link-blanco" data-direction="reverse" data-transition="slidefade">
-						<p class="small">Imagen de referencia</p>
-						<h2>Calidad</h2>
-					</div>
-					<div class="ui-block-b text-right">
-						<p class="megusta"> <a href="#megusta" class="link-blanco"> <i class="fas fa-heart"></i> 681 me
-								gusta</a> <a href="#quienesomos"> <i class="fas fa-chevron-right"></i></a></p>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="list-item bg-5 blanco">
-				<div class="ui-grid-a title-item">
-					<div class="ui-block-a text-left link-blanco" data-direction="reverse" data-transition="slidefade">
-						<p class="small">Imagen de referencia</p>
-						<h2>Personal 2022</h2>
-					</div>
-					<div class="ui-block-b text-right">
-						<p class="megusta"> <a href="#megusta" class="link-blanco"> <i class="fas fa-heart"></i> 442 me
-								gusta</a> <a href="#quienesomos"> <i class="fas fa-chevron-right"></i></a></p>
-					</div>
-				</div>
-			</div>
-
-
-
-
-
-		</div>
-
-		<div class="barra-pie" data-position="fixed" data-role="footer" data-theme="b">
-
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#menu"><i class="fas fa-home"></i></a></li>
-					<li><a href="#favoritos"><i class="fas fa-heart"></i></a></li>
-					<li><a href="#perfil"><i class="fas fa-user"></i></a></li>
-
-				</ul>
-			</div>
-		</div>
-	</div>
-
 
 	<!-- Perfil  -->
 
@@ -458,11 +290,7 @@
 			<ul class="text-right">
 
 				<li><a href="#menu">Inicio</a></li>
-				<li><a href="#mi-colegio">Mi colegio</a></li>
-				<li><a href="#estudiantes">Estudiantes</a></li>
-				<li><a href="#gobierno-escolar">Gobierno escolar</a></li>
-				<li><a href="#docentes">Docentes</a></li>
-				<li><a href="#varios">Varios</a></li>
+				<li><a href="#diagnostico">Diagnóstico</a></li>
 				<li><a href="#perfil">Perfil</a></li>
 
 			</ul>
@@ -516,18 +344,15 @@
 			<center><h2>Datos de Perfil</h2></center>	<br>
 
 				<ul>
-					<li> <b>Nombres:</b> Pedro León </li>
+					<li> <b>Nombres:</b> Paola Andrea </li>
 					<hr>
-					<li> <b>Apellidos:</b> Sánchez Rendón</li>
+					<li> <b>Apellidos:</b> Noreña Cardona</li>
+					<hr> 
+					<li> <b>Usuario:</b> panoreaac</li>
 					<hr>
-					<li> <b>Usuario:</b> Plsanchezr</li>
+					<li> <b>Email:</b> panoreaac@eafit.edu.co</li>
 					<hr>
-					<li> <b>Email:</b> plsanchezr@iefundadores.edu.com</li>
-					<hr>
-					<li> <b>Jornada:</b> Mañana</li>
 				</ul>
-
-				<hr>
 
 				<ul>
 					
@@ -575,301 +400,8 @@
 		</div>
 	</div>
 
-	<!-- Estudiantes  -->
 
-	<div data-role="page" id="estudiantes">
-		<div data-role="panel" id="menu-panel-6" class="menu-deslizable" data-display="overlay" data-position="right">
-
-
-
-
-
-			<!-- panel content goes here -->
-
-			<h2 class="text-right">Menú</h2>
-			<ul class="text-right">
-
-				<li><a href="#menu">Inicio</a></li>
-				<li><a href="#mi-colegio">Mi colegio</a></li>
-				<li><a href="#estudiantes">Estudiantes</a></li>
-				<li><a href="#diagnostico">Diagnóstico</a></li>
-				<li><a href="#docentes">Docentes</a></li>
-				<li><a href="#varios">Varios</a></li>
-				<li><a href="#perfil">Perfil</a></li>
-
-			</ul>
-
-
-
-			<p class="text-center"><a href="#ingreso" class="btn btn-azul">CERRAR SESIÓN</a></p>
-
-
-
-
-
-		</div><!-- /panel -->
-
-
-
-		<div data-role="header" data-position="fixed" class="barra-top">
-
-
-
-			<div class="ui-grid-b cabecera">
-
-				<div class="ui-block-a"><a href="#menu" class="btn link-blanco" data-direction="reverse"
-						data-transition="slidefade">
-						<i class="fas fa-arrow-left"></i>
-						<spam class="ocultar">Regresar</spam>
-					</a></div>
-
-				<div class="ui-block-b text-center">
-					<h1>Estudiantes</h1>
-				</div>
-
-				<div class="ui-block-c text-right"><a href="#menu-panel-6" class="btn link-blanco"><i
-							class="fas fa-bars"></i></a></div>
-
-			</div>
-
-		</div>
-
-		<div class="blog">
-
-			<h2>Estudiantes</h2>
-			<p>Acá podrás encontrar toda la información relacionada con los estudiantes.</p>
-		</div>
-
-		<ul data-role="listview">
-
-
-			<li><a href="https://login.master2000.net/ingreso/?A=105001026697&&">
-					<h3>Master2000</h3>
-					<p>Ingresa a la plataforma evaluativa para ver tus notas</p>
-				</a></li>
-
-
-			<li><a href="https://profewilliam2019.wixsite.com/mtiefundadores">
-					<h3>Media técnica Diseño Gráfico</h3>
-					<p>Conoce los trabajos hechos por los estudiantes</p>
-				</a></li>
-
-
-			<li><a
-					href="https://modulo.master2000.net/recursos/uploads/557/ALTERNANCIA/HORARIOPRESENCIALJORNADAMANANA.pdf">
-					<h3>Horario</h3>
-					<p>Conoce el horario de la jornada de la mañana</p>
-				</a></li>
-
-
-			<li><a href="https://modulo.master2000.net/recursos/uploads/557/ALTERNANCIA/JORNADAPRESENCIALTARDE.pdf">
-					<h3>Horario</h3>
-					<p>Conoce el horario de la jornada de la tarde</p>
-				</a></li>
-
-
-			<li><a href="https://zeno.fm/fundadores-stereo/">
-					<h3>Emisora escolar</h3>
-					<p>Escucha la emisora escolar "Fundadores Stereo"</p>
-				</a></li>
-
-
-			<li><a
-					href="https://modulo.master2000.net/recursos/uploads/557/archivosinicio/Notifundadores20211Terminado.pdf">
-					<h3>Periódico escolar</h3>
-					<p>Lee nuestro periódico escolar "Notifundadores"</p>
-				</a></li>
-
-
-
-		</ul>
-
-		<br>
-
-
-
-
-		<div class="barra-pie" data-position="fixed" data-role="footer" data-theme="b">
-
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#menu"><i class="fas fa-home"></i></a></li>
-					<li><a href="#favoritos"><i class="fas fa-heart"></i></a></li>
-					<li><a href="#perfil"><i class="fas fa-user"></i></a></li>
-
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<!-- Varios  -->
-
-
-	<div data-role="page" id="varios">
-		<div data-role="panel" id="menu-panel-3" class="menu-deslizable" data-display="overlay" data-position="right">
-
-
-
-
-
-			<!-- panel content goes here -->
-
-			<h2 class="text-right">Menú</h2>
-			<ul class="text-right">
-
-				<li><a href="#menu">Inicio</a></li>
-				<li><a href="#mi-colegio">Mi colegio</a></li>
-				<li><a href="#estudiantes">Estudiantes</a></li>
-				<li><a href="#diagnostico">Diagnóstico</a></li>
-				<li><a href="#docentes">Docentes</a></li>
-				<li><a href="#varios">Varios</a></li>
-				<li><a href="#perfil">Perfil</a></li>
-
-			</ul>
-
-
-
-			<p class="text-center"><a href="#ingreso" class="btn btn-azul">CERRAR SESIÓN</a></p>
-
-
-
-
-
-		</div><!-- /panel -->
-
-
-
-		<div data-role="header" data-position="fixed" class="barra-top">
-
-
-
-			<div class="ui-grid-b cabecera">
-
-				<div class="ui-block-a"><a href="#menu" class="btn link-blanco" data-direction="reverse"
-						data-transition="slidefade">
-						<i class="fas fa-arrow-left"></i>
-						<spam class="ocultar">Regresar</spam>
-					</a></div>
-
-				<div class="ui-block-b text-center">
-					<h1>Varios</h1>
-				</div>
-
-				<div class="ui-block-c text-right"><a href="#menu-panel-3" class="btn link-blanco"><i
-							class="fas fa-bars"></i></a></div>
-
-			</div>
-
-		</div>
-
-		<div class="blog">
-
-			<h2>Contenidos varios</h2>
-			<p>Acá podrás encontrar informaciones variadas de nuestra institución educativa.</p>
-		</div>
-
-		<ul data-role="listview">
-
-			<li><a href="https://forms.gle/1cvUHSJJhmPKGNec7">
-					<h3>Botón Antibullying</h3>
-					<p>DENUNCIA AQUÍ</p>
-				</a></li>
-
-
-			<li><a href="https://modulo.master2000.net/recursos/uploads/557/BIBLIOTECA/orejas-de-mariposa.pdf">
-					<h3>Biblioteca en casa</h3>
-					<p>Libro recomendado de la semana</p>
-				</a></li>
-			
-			
-			<li><a href="https://www.youtube.com/watch?v=DqUTd5eSRiw&ab_channel=APRENDEFACILTV">
-					<h3>Himno</h3>
-					<p>Escucha el himno de nuestra institución</p>
-				</a></li>
-
-
-			<li><a href="https://forms.gle/yTotrxVRQ5oQy8E59">
-					<h3>Atención Psicosocial</h3>
-					<p>Solicitud para atención psicosocial</p>
-				</a></li>
-
-
-			<li><a href="https://media.master2000.net/menu/557/4370/mper_arch_42883_POA%202021-2%20(2).pdf">
-					<h3>Plan operativo anual 2022</h3>
-					<p>Detalles del plan operativo del presente año</p>
-				</a></li>
-
-
-			<li><a
-					href="https://media.master2000.net/menu/557/8013/mper_118166_Protocolo%20de%20Bioseguridad%20de%20la%20Institución%20Educativa%20Fundadores%20final.pdf">
-					<h3>Protocolo de bioseguridad</h3>
-					<p>Conoce los protocolos de bioseguridad de la institución</p>
-				</a></li>
-
-
-
-
-			<li><a href="https://media.master2000.net/menu/557/4370/mper_arch_42878_MISIÓN%20VISION.pdf">
-					<h3>Misión-Visión</h3>
-					<p>Conoce la misión-visión de nuestra institución</p>
-				</a></li>
-
-
-			<li><a href="https://media.master2000.net/menu/557/4370/mper_arch_44790_POLITICA%20DE%20CALIDAD.pdf">
-					<h3>Política de calidad</h3>
-					<p>Conoce la política de calidad de nuestra institución</p>
-				</a></li>
-
-
-
-			<li><a href="http://www.cristic.com/juegos-educativos/">
-					<h3>Juegos educativos</h3>
-					<p>Descubre divertidos algunos juegos educativos</p>
-				</a></li>
-
-
-			<li><a href="https://modulo.master2000.net/recursos/uploads/557/archivosinicio/MANUALDECONVIVENCIA.pdf">
-					<h3>Manual de convivencia</h3>
-					<p>Conoce el manual de convivencia de la institución"</p>
-				</a></li>
-
-			<li><a href="https://modulo.master2000.net/recursos/uploads/557/archivosinicio/PEI.pdf">
-					<h3>Proyecto educativo institucional</h3>
-					<p>Conoce el P.E.I. de la institución</p>
-				</a></li>
-
-			<li><a href="https://modulo.master2000.net/recursos/uploads/557/archivosinicio/SIE.pdf">
-					<h3>Sistema institucional de evaluación</h3>
-					<p>Conoce el S.I.E. de la institución</p>
-				</a></li>
-
-			<li><a href="https://modulo.master2000.net/recursos/uploads/557/archivosinicio/MODELOHUMANISTA.pdf">
-					<h3>Modelo pedagógico</h3>
-					<p>Conoce el modelo padagógico de la institución</p>
-				</a></li>
-
-		</ul>
-
-		<br>
-
-
-
-
-		<div class="barra-pie" data-position="fixed" data-role="footer" data-theme="b">
-
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#menu"><i class="fas fa-home"></i></a></li>
-					<li><a href="#favoritos"><i class="fas fa-heart"></i></a></li>
-					<li><a href="#perfil"><i class="fas fa-user"></i></a></li>
-
-				</ul>
-			</div>
-		</div>
-	</div>
-
-
-	<!-- Gobierno escolar  -->
+	<!-- Diagnostico  -->
 
 
 <div data-role="page" id="diagnostico">
@@ -885,11 +417,7 @@
 			<ul class="text-right">
 
 				<li><a href="#menu">Inicio</a></li>
-				<li><a href="#mi-colegio">Mi colegio</a></li>
-				<li><a href="#estudiantes">Estudiantes</a></li>
 				<li><a href="#diagnostico">Diagnóstico</a></li>
-				<li><a href="#docentes">Docentes</a></li>
-				<li><a href="#varios">Varios</a></li>
 				<li><a href="#perfil">Perfil</a></li>
 
 			</ul>
@@ -977,11 +505,6 @@
 	
 	<a href="#menu"><button>Enviar</button></a>
 		
-	
-	
-
-		
-
 
 
 
@@ -998,128 +521,7 @@
 		</div>
 	</div>
 
-	<!-- Docentes  -->
-
-	<div data-role="page" id="docentes">
-		<div data-role="panel" id="menu-panel-7" class="menu-deslizable" data-display="overlay" data-position="right">
-
-
-
-
-
-			<!-- panel content goes here -->
-
-			<h2 class="text-right">Menú</h2>
-			<ul class="text-right">
-
-				<li><a href="#menu">Inicio</a></li>
-				<li><a href="#mi-colegio">Mi colegio</a></li>
-				<li><a href="#estudiantes">Estudiantes</a></li>
-				<li><a href="#diagnostico">Diagnóstico</a></li>
-				<li><a href="#docentes">Docentes</a></li>
-				<li><a href="#varios">Varios</a></li>
-				<li><a href="#perfil">Perfil</a></li>
-
-			</ul>
-
-
-
-			<p class="text-center"><a href="#ingreso" class="btn btn-azul">CERRAR SESIÓN</a></p>
-
-
-
-
-
-		</div><!-- /panel -->
-
-
-
-		<div data-role="header" data-position="fixed" class="barra-top">
-
-
-
-			<div class="ui-grid-b cabecera">
-
-				<div class="ui-block-a"><a href="#menu" class="btn link-blanco" data-direction="reverse"
-						data-transition="slidefade">
-						<i class="fas fa-arrow-left"></i>
-						<spam class="ocultar">Regresar</spam>
-					</a></div>
-
-				<div class="ui-block-b text-center">
-					<h1>Docentes</h1>
-				</div>
-
-				<div class="ui-block-c text-right"><a href="#menu-panel-7" class="btn link-blanco"><i
-							class="fas fa-bars"></i></a></div>
-
-			</div>
-
-		</div>
-
-		<div class="blog">
-
-			<h2>Docentes</h2>
-			<p>Acá podrás encontrar toda la información relacionada con los docentes.</p>
-		</div>
-
-		<ul data-role="listview">
-
-			<li><a
-					href="https://media.master2000.net/menu/557/4571/mper_arch_103440_DIRECTORIO%20DE%20DOCENTES%20Y%20DIRECTIVOS%20PRINCIPAL.pdf">
-					<h3>Directorio docentes</h3>
-					<p>Conoce el directorio de docentes de la sede Principal</p>
-				</a></li>
-
-
-			<li><a
-					href="https://media.master2000.net/menu/557/4571/mper_arch_103441_DIRECTORIO%20DE%20DOCENTES%20Y%20DIRECTIVOS%20SOCORRO.pdf">
-					<h3>Directorio docentes</h3>
-					<p>Conoce el directorio de docentes de la sede El Socorro</p>
-				</a></li>
-
-
-			<li><a
-					href="https://media.master2000.net/menu/557/4571/mper_arch_103442_DIRECTORIO%20DE%20DOCENTES%20Y%20DIRECTIVOS%20SABATINOS.pdf">
-					<h3>Directorio docentes</h3>
-					<p>Conoce el directorio de docentes de la jornada sabatina</p>
-				</a></li>
-
-
-			<li><a href="https://media.master2000.net/menu/557/4571/mper_arch_42914_MANUAL%20DE%20FUNCIONES%20AC.pdf">
-					<h3>Manual de funciones de docentes</h3>
-					<p>Conoce las funciones de los docentes y directivos</p>
-				</a></li>
-
-
-			<li><a href="https://media.master2000.net/menu/557/4571/mper_arch_47801_POA%202021.pdf">
-					<h3>Plan operativo anual</h3>
-					<p>Conoce el plan operativo anual de la institución</p>
-				</a></li>
-
-
-
-		</ul>
-
-		<br>
-
-
-
-
-		<div class="barra-pie" data-position="fixed" data-role="footer" data-theme="b">
-
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#menu"><i class="fas fa-home"></i></a></li>
-					<li><a href="#favoritos"><i class="fas fa-heart"></i></a></li>
-					<li><a href="#perfil"><i class="fas fa-user"></i></a></li>
-
-				</ul>
-			</div>
-		</div>
-	</div>
-
-
+	
 
 
 
